fix (migration/seeders): modify attributes in company models + migrations
